--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Resets */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,6 +23,9 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    font-size: 13px;
+    background: #eeeeee;
     line-height: 1;
 }
 ol, ul {
