--- a/app/task-form.component.html
+++ b/app/task-form.component.html
@@ -12,9 +12,10 @@
             </div>
         </div>
         <div class="select-wrapper">
-            <select class="frequency" [(ngModel)]="newTask.frequency">
-                <option>Today</option>
+            <select class="frequency" [(ngModel)]="newTask.day">
+                <option value="">Today</option>
                 <option disabled="">----------------</option>
+                <option value="Sunday">Sunday</option>
                 <option value="Monday">Monday</option>
                 <option value="Tuesday">Tuesday</option>
                 <option value="Wednesday">Wednesday</option>
