--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,3 @@
-<header title="{{title}}"></header>
-<task-form></task-form>
+<header [title]="title"></header>
+<task-form [tasks]="tasks"></task-form>
 <task-list></task-list>
