--- a/app/task-list.component.html
+++ b/app/task-list.component.html
@@ -6,6 +6,31 @@
 		</div>
 		<div class="day-of-week">Sunday</div>
 		<ul>
+			<li *ngFor="let task of tasks">
+				<div class="card">
+					<i class="fa fa-bars handle"></i>
+					<div class="card-content">
+						<div class="description">{{task.description}} {{task.day}}</div>
+						<div class="actions">
+							<a href="#"><i class="fa fa-pencil"></i> Edit</a>
+							<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+						</div>
+					</div>
+					<div class="counter">
+						<div class="icon">
+							<div class="hours">{{task.counter}}h</div>
+							<div class="play"><i class="fa fa-play-circle"></i></div>
+						</div>
+						<div class="select-wrapper">
+							<select class="status">
+								<option>To Do</option>
+								<option>In Progress</option>
+								<option>Done</option>
+							</select>
+						</div>
+					</div>
+				</div>
+			</li>
 			<li>
 				<div class="card">
 					<i class="fa fa-bars handle"></i>
