--- a/app/task-list.component.html
+++ b/app/task-list.component.html
@@ -6,7 +6,7 @@
 		</div>
 		<div class="day-of-week">Sunday</div>
 		<ul>
-			<li *ngFor="let task of tasks">
+			<li *ngFor="let task of tasks.reverse()">
 				<div class="card">
 					<i class="fa fa-bars handle"></i>
 					<div class="card-content">
