--- a/app/task-list.component.html
+++ b/app/task-list.component.html
@@ -1,10 +1,10 @@
-<div class="task-list">
+<div class="task-list" *ngFor="let date of dates" *ngIf="false">
 	<div class="wrapper">
 		<div class="date">
-			<div class="day">15</div>
-			<div class="month">May</div>
+			<div class="day">{{date.date}}</div>
+			<div class="month">{{date.month}}</div>
 		</div>
-		<div class="day-of-week">Sunday</div>
+		<div class="day-of-week">{{date.day}}</div>
 		<ul>
 			<li *ngFor="let task of tasks.reverse()">
 				<div class="card">
@@ -31,6 +31,17 @@
 					</div>
 				</div>
 			</li>
+		</ul>
+	</div>
+</div>
+<div class="task-list">
+	<div class="wrapper">
+		<div class="date">
+			<div class="day">15</div>
+			<div class="month">May</div>
+		</div>
+		<div class="day-of-week">Sunday</div>
+		<ul>
 			<li>
 				<div class="card">
 					<i class="fa fa-bars handle"></i>
