--- a/app/task-list.component.html
+++ b/app/task-list.component.html
@@ -1,122 +1,39 @@
-<div class="task-list" *ngFor="let date of dates" *ngIf="false">
-	<div class="wrapper">
-		<div class="date">
-			<div class="day">{{date.date}}</div>
-			<div class="month">{{date.month}}</div>
-		</div>
-		<div class="day-of-week">{{date.day}}</div>
-		<ul>
-			<li *ngFor="let task of tasks.reverse()">
-				<div class="card">
-					<i class="fa fa-bars handle"></i>
-					<div class="card-content">
-						<div class="description">{{task.description}} {{task.day}}</div>
-						<div class="actions">
-							<a href="#"><i class="fa fa-pencil"></i> Edit</a>
-							<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
-						</div>
-					</div>
-					<div class="counter">
-						<div class="icon">
-							<div class="hours">{{task.counter}}h</div>
-							<div class="play"><i class="fa fa-play-circle"></i></div>
-						</div>
-						<div class="select-wrapper">
-							<select class="status">
-								<option>To Do</option>
-								<option>In Progress</option>
-								<option>Done</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</li>
-		</ul>
-	</div>
-</div>
 <div class="task-list">
-	<div class="wrapper">
-		<div class="date">
-			<div class="day">15</div>
-			<div class="month">May</div>
+	<div class="section" *ngFor="let date of dates">
+		<div class="wrapper" *ngIf="checkHasTasks(date.day)">
+			<div class="date">
+				<div class="day">{{date.date}}</div>
+				<div class="month">{{date.month}}</div>
+			</div>
+			<div class="day-of-week">{{date.day}}</div>
+			<ul>
+				<li *ngFor="let task of getTasks(date.day)">
+					<div class="card">
+						<i class="fa fa-bars handle"></i>
+						<div class="card-content">
+							<div class="description">{{task.description}} {{task.day}}</div>
+							<div class="actions">
+								<a href="#"><i class="fa fa-pencil"></i> Edit</a>
+								<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+							</div>
+						</div>
+						<div class="counter">
+							<div class="icon">
+								<div class="hours">{{task.counter}}h</div>
+								<div class="play"><i class="fa fa-play-circle"></i></div>
+								<!--div class="done"><i class="fa fa-check"></i></div-->
+							</div>
+							<div class="select-wrapper">
+								<select class="status">
+									<option>To Do</option>
+									<option>In Progress</option>
+									<option>Done</option>
+								</select>
+							</div>
+						</div>
+					</div>
+				</li>
+			</ul>
 		</div>
-		<div class="day-of-week">Sunday</div>
-		<ul>
-			<li>
-				<div class="card">
-					<i class="fa fa-bars handle"></i>
-					<div class="card-content">
-						<div class="description">Go to school</div>
-						<div class="actions">
-							<a href="#"><i class="fa fa-pencil"></i> Edit</a>
-							<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
-						</div>
-					</div>
-					<div class="counter">
-						<div class="icon">
-							<div class="done"><i class="fa fa-check"></i></div>
-							<!--div class="play"><i class="fa fa-play-circle"></i></div-->
-						</div>
-						<div class="select-wrapper">
-							<select class="status">
-								<option>To Do</option>
-								<option>In Progress</option>
-								<option>Done</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li>
-				<div class="card">
-					<i class="fa fa-bars handle"></i>
-					<div class="card-content">
-						<div class="description">Practice the Piano</div>
-						<div class="actions">
-							<a href="#"><i class="fa fa-pencil"></i> Edit</a>
-							<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
-						</div>
-					</div>
-					<div class="counter">
-						<div class="icon">
-							<div class="hours">1h</div>
-							<div class="play"><i class="fa fa-play-circle"></i></div>
-						</div>
-						<div class="select-wrapper">
-							<select class="status">
-								<option>To Do</option>
-								<option>In Progress</option>
-								<option>Done</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li>
-				<div class="card">
-					<i class="fa fa-bars handle"></i>
-					<div class="card-content">
-						<div class="description">Go to school</div>
-						<div class="actions">
-							<a href="#"><i class="fa fa-pencil"></i> Edit</a>
-							<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
-						</div>
-					</div>
-					<div class="counter">
-						<div class="icon">
-							<div class="hours">1h</div>
-							<div class="play"><i class="fa fa-play-circle"></i></div>
-						</div>
-						<div class="select-wrapper">
-							<select class="status">
-								<option>To Do</option>
-								<option>In Progress</option>
-								<option>Done</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</li>
-		</ul>
 	</div>
 </div>
