--- a/app/task-list.component.html
+++ b/app/task-list.component.html
@@ -17,7 +17,7 @@
 							<div class="description">{{task.description}}</div>
 							<div class="actions">
 								<a href="#"><i class="fa fa-pencil"></i> Edit</a>
-								<a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+								<a href="#" (click)="deleteTask(task)"><i class="fa fa-trash-o"></i> Delete</a>
 							</div>
 						</div>
 						<div class="counter">
