--- a/styles.css
+++ b/styles.css
@@ -117,3 +117,9 @@ select:-moz-focusring {
 .section {
     margin-bottom: 20px;
 }
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -100px;
+}
